# THQ

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
grafana/dashboards/: thq-overview.json
grafana/provisioning/datasources/: postgres.yml
src/: .env  App.tsx  config.rs  domain.rs  graphql.rs  index.css  main.rs  segment.rs  server.rs  state.rs  storage.rs
src-tauri/: .env.client  Cargo.toml  tauri.conf.json
src-tauri/src/: domain.rs  external.rs  lib.rs  main.rs  tauri_bridge.rs  ws_client.rs  ws_server.rs
src/atoms/: telemetryItem.ts
src/components/: ConsoleLogTable.tsx  CurrentLocationMap.tsx  MovingLogTable.tsx  SpeedChart.tsx
src/constants/: cli.ts
src/domain/: commands.ts  emoji.ts  text.ts  threshold.ts
src/hooks/: useTelemetry.ts
src/static/: join.csv
src/test/domain/: commands.test.ts
src/test/hooks/: useTelemetry.test.ts  useTelemetry.test.tsx
src/utils/: getDivIconByState.tsx  server.ts  unit.ts
