[package]
name = "thq-server"
version = "0.1.0"
edition = "2021"
description = "Standalone telemetry WebSocket server for THQ"
license = "MIT"
authors = ["TrainLCD"]

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
futures = "0.3"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
async-graphql = { version = "6", features = ["chrono"] }
async-graphql-axum = "6"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
tower = "0.4"
hyper = "0.14"
subtle = "2"
