[package]
name = "thq"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
nanoid = "0.4.0"
tauri-plugin-log = "2"
log = "0.4.27"
chrono = "0.4.41"
reqwest = { version = "0.12.15", features = ["json"] }
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
